Layout Fixes
-FIxed Layout issues
-Replaced Vehicle info text by a Description component

--- a/src/components/ContactVehicle/ContactVehicle.scss
+++ b/src/components/ContactVehicle/ContactVehicle.scss
@@ -6,6 +6,8 @@
   align-items: center;
   justify-content: space-evenly;
   background-color: #25d366;
+  max-width: 150px;
+  margin-top: 10px;
 
   &:hover {
     background-color: #28ec70;
@@ -16,11 +18,13 @@
     svg {
       width: 20px;
       height: 20px;
+      margin-right: 5px;
+      margin-left: 5px;
     }
   }
 
   h3 {
     margin-top: 5px;
-    color: white;
+    color: white !important;
   }
 }
