--- a/src/components/VehicleCard/VehicleCard.scss
+++ b/src/components/VehicleCard/VehicleCard.scss
@@ -4,5 +4,14 @@
 
   h3 {
     font-weight: bold;
+    @media (max-width: 576px) {
+      font-size: small;
+    }
+  }
+
+  p {
+    @media (max-width: 576px) {
+      font-size: small;
+    }
   }
 }
