--- a/src/components/VehicleInfo/VehicleInfo.scss
+++ b/src/components/VehicleInfo/VehicleInfo.scss
@@ -3,16 +3,9 @@
   min-height: 600px;
   width: 100%;
 
-  &__text {
+  &-card {
     display: flex;
-    justify-content: flex-start;
     flex-direction: column;
-    text-align: justify;
-    align-items: flex-start;
-    background-color: white;
-    border-radius: 15px;
-    h2 {
-      font-weight: bold;
-    }
+    align-items: center;
   }
 }
