--- a/src/layouts/HomeLayout/HomeLayout.scss
+++ b/src/layouts/HomeLayout/HomeLayout.scss
@@ -1,6 +1,14 @@
 .home-layout {
   min-width: 100%;
 
+  background-color: rgb(251, 251, 251);
+
+  h1,
+  h2,
+  h3 {
+    color: rgb(90, 90, 90);
+  }
+
   &__header {
     width: 100%;
     height: 60px;
@@ -19,6 +27,15 @@
     width: 100%;
 
     &-whatsapp-icon {
+      @media (max-width: 576px) {
+        width: 40px !important;
+        height: 40px !important;
+      }
+
+      @media (min-width: 576px) {
+        width: 40px !important;
+        height: 40px !important;
+      }
       .ant-avatar {
         position: fixed;
         right: 30px;
